# call-alert

./: .gitignore  Makefile  call_alert.swift  check_camera.py  notification.swift  pyproject.toml
call_alert/: __main__.py  calendar_get.py  camera.py  notification.py  text_to_speech.py
src/: __main__.py
